--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 						<li><a href="homepage.html" class="nav_link">Home</a></li>
 						<li><a href="#" class="nav_link">Menu</a></li>
 						<li><a href="#" class="nav_link">Order</a></li>
-                        <li><a href="about-contact.html" class="nav_link">About</a></li>
+                        <li><a href="about and contact/about-contact.html" class="nav_link">About</a></li>
 				</ul>
 				<div class="nav_close" id="nav-close" aria-label="Close menu">
 					<span>&#10006;</span> 
