--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<div class="nav_menu" id="nav-menu">
 				<ul class="nav_list">
 						<li><a href="homepage.html" class="nav_link">Home</a></li>
-						<li><a href="#" class="nav_link">Menu</a></li>
+						<li><a href="Menu.html" class="nav_link">Menu</a></li>
 						<li><a href="#" class="nav_link">Order</a></li>
                         <li><a href="about and contact/about-contact.html" class="nav_link">About</a></li>
 				</ul>
