--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<ul class="nav_list">
 						<li><a href="homepage.html" class="nav_link">Home</a></li>
 						<li><a href="Menu.html" class="nav_link">Menu</a></li>
-						<li><a href="#" class="nav_link">Order</a></li>
+						<li><a href="order.html" class="nav_link">Order</a></li>
 				</ul>
 				<div class="nav_close" id="nav-close" aria-label="Close menu">
 					<span>&#10006;</span> 
