--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Chang's Burger</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="styles.css">
+<link rel = "stylesheet" href="styles.css" >
 </head>
 <body>
 	
@@ -17,23 +17,142 @@
 			<div class="nav_menu" id="nav-menu">
 				<ul class="nav_list">
 						<li><a href="homepage.html" class="nav_link">Home</a></li>
-						<li><a href="Menu.html" class="nav_link">Menu</a></li>
-						<li><a href="order.html" class="nav_link">Order</a></li>
+						<li><a href="#" class="nav_link">Menu</a></li>
+						<li><a href="#" class="nav_link">Order</a></li>
+  
 				</ul>
-				<div class="nav_close" id="nav-close" aria-label="Close menu">
-					<span>&#10006;</span> 
-				</div>
+				<div class="nav_close" id="nav-close">
+				<img src="close-large-line.png">
+			</div>
 			</div>
 		
-			<div class="nav_toggle" id="nav-toggle" aria-label="Open menu">
-				<img src="apps-fill.png" alt="Menu">
+			<div class="nav_toggle" id="nav-toggle">
+				<img src="apps-fill.png">
 			</div>
 		</nav>
 	</header>
 <main class="main">
-	
+	<section class="home section" id="home">
+		<div class= "home_container container grid">
+		<div class="home_data">
+			<h1 class="home_title">Alluring <br> special sauce </h1>
+			<p class="home_description">
+			At Chang's Burger, we’re all about big flavors, fresh ingredients, and the perfect bite. Our handcrafted burgers are made to satisfy, and our signature special sauce takes them to the next level. Whether you're craving a juicy classic, a gourmet creation, or a plant-based delight, we’ve got something just for you.
+			</p>
+			<a href="#" class="button">Order Now!</a>
+		</div>
+		<div class="home_images">
+		<img src="burger.png" class="home_burger">
+		<img src="dish.png" class="home_dish">
+		
+		<img src="potato.png" class="home_ingredient home_potato-1">
+		<img src="potato.png" class="home_ingredient home_potato-2">
+		<img src="tomato.png" class="home_ingredient home_tomato-1">
+		<img src="tomato.png" class="home_ingredient home_tomato-2">
+		<img src="lettuce.png" class="home_ingredient home_lettuce-1">
+		<img src="lettuce.png" class="home_ingredient home_lettuce-2">
+		</div>
+		</div>
+	</section>
+	 <section class="banner">
+  <div class="banner__content">
+    <h2 class="section__header">
+      Get More for Less!
+    </h2>
+    <p class="section__description">
+      Craving burgers without breaking the bank? For just 50 pesos, you can <b>Buy 1, 
+      Take 1! </b>That’s right—double the deliciousness for the price of one.
+      <br>
+      Treat yourself to our mouthwatering burgers made with fresh 
+      ingredients and our special sauce. Hurry—this offer won’t last long!
+    </p>
+    <div class="banner__flex">
+      <div class="banner__card">
+        <img src="restaurant-fill.svg" alt="Fresh & Natural" />
+        <h4>Fresh & Natural</h4>
+      </div>
+      <div class="banner__card">
+        <img src="archive-fill.svg" alt="Quick Packaging" />
+        <h4>Quick Packaging</h4>
+      </div>
+      <div class="banner__card">
+        <img src="truck-fill.svg" alt="Fast Delivery" />
+        <h4>Fast Delivery</h4>
+      </div>
+    </div>
+  </div>
+  <div class="banner__image"></div>
+</section>
+ <section class="menu" id="menu">
+      <div class="section__container menu__container">
+        <h2 class="section__header">Popular Menu</h2>
+        <a href="#">
+          View All
+          <i class="ri-arrow-right-long-line"></i>
+        </a>
+        <div class="menu__grid">
+          <div class="menu__card">
+            <img src="b1t1.jpg" alt="menu" />
+            <div class="menu__card__content">
+              <h4>Buger BUY 1 TAKE 1</h4>
+              <h3>₱50.00</h3>
+            </div>
+          </div>
+          <div class="menu__card">
+            <img src="bacon.jpg" alt="menu" />
+            <div class="menu__card__content">
+              <h4>Burger w/ Bacon </h4>
+              <h3>₱50.00</h3>
+            </div>
+          </div>
+          <div class="menu__card">
+            <img src="footlong.jpg" alt="menu" />
+            <div class="menu__card__content">
+              <h4>Footlong</h4>
+              <h3>₱50.00</h3>
+            </div>
+          </div>
+          <div class="menu__card">
+            <img src="mojos.jpg" alt="menu" />
+            <div class="menu__card__content">
+              <h4>Mojos</h4>
+              <h3>₱40.00</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
 	
 </main>	
+<footer>
+      <div class="section__container footer__container">
+        <div class="footer__col">
+          <a href="#main" class="logo">Chang's <span>Burger</span></a>
+        </div>
+        <div class="footer__col">
+          <ul class="footer__links">
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Contact us</a></li>
+            <li><a href="#">FAQ</a></li>
+          </ul>
+        </div>
+        <div class="footer__col">
+          <ul class="socials">
+            <li> Charanjeev </li>
+			<li> Eldridge Camaya </li>
+			<li> Gabriel Mendoza </li>
+			<li> Ashanti Tagala </li>
+          </ul>
+        </div>
+      </div>
+	  
+      <div class="footer__bar">
+        Copyright © 2024 Chang's Burger. All rights reserved.
+      </div>
+    </footer>
+	<script src="scrollreveal.min.js"></script>
 	<script src="main.js"></script>
 
 </body>
