--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 	
 	<header class="header" id="header">
 		<nav class="nav container">
-			<a href="homepage.html" class="nav_logo">
+			<a href="index.html" class="nav_logo">
 				<div>
-					<img src="logo.png" alt="logo">
+					<img src="Images/logo.png" alt="logo">
 				</div>
 			</a>
 			<div class="nav_menu" id="nav-menu">
 				<ul class="nav_list">
-						<li><a href="homepage.html" class="nav_link">Home</a></li>
-						<li><a href="#" class="nav_link">Menu</a></li>
-						<li><a href="#" class="nav_link">Order</a></li>
+						<li><a href="index.html" class="nav_link">Home</a></li>
+						<li><a href="Menu/Menu.html" class="nav_link">Menu</a></li>
+						<li><a href="Order/order.html" class="nav_link">Order</a></li>
   
 				</ul>
 				<div class="nav_close" id="nav-close">
-				<img src="close-large-line.png">
+				<img src="Images/close-large-line.png">
 			</div>
 			</div>
 		
 			<div class="nav_toggle" id="nav-toggle">
-				<img src="apps-fill.png">
+				<img src="Images/apps-fill.png">
 			</div>
 		</nav>
 	</header>
@@ -42,15 +42,15 @@
 			<a href="#" class="button">Order Now!</a>
 		</div>
 		<div class="home_images">
-		<img src="burger.png" class="home_burger">
-		<img src="dish.png" class="home_dish">
+		<img src="images/burger.png" class="home_burger">
+		<img src="images/dish.png" class="home_dish">
 		
-		<img src="potato.png" class="home_ingredient home_potato-1">
-		<img src="potato.png" class="home_ingredient home_potato-2">
-		<img src="tomato.png" class="home_ingredient home_tomato-1">
-		<img src="tomato.png" class="home_ingredient home_tomato-2">
-		<img src="lettuce.png" class="home_ingredient home_lettuce-1">
-		<img src="lettuce.png" class="home_ingredient home_lettuce-2">
+		<img src="images/potato.png" class="home_ingredient home_potato-1">
+		<img src="images/potato.png" class="home_ingredient home_potato-2">
+		<img src="images/tomato.png" class="home_ingredient home_tomato-1">
+		<img src="images/tomato.png" class="home_ingredient home_tomato-2">
+		<img src="images/lettuce.png" class="home_ingredient home_lettuce-1">
+		<img src="images/lettuce.png" class="home_ingredient home_lettuce-2">
 		</div>
 		</div>
 	</section>
@@ -68,15 +68,15 @@
     </p>
     <div class="banner__flex">
       <div class="banner__card">
-        <img src="restaurant-fill.svg" alt="Fresh & Natural" />
+        <img src="images/restaurant-fill.svg" alt="Fresh & Natural" />
         <h4>Fresh & Natural</h4>
       </div>
       <div class="banner__card">
-        <img src="archive-fill.svg" alt="Quick Packaging" />
+        <img src="images/archive-fill.svg" alt="Quick Packaging" />
         <h4>Quick Packaging</h4>
       </div>
       <div class="banner__card">
-        <img src="truck-fill.svg" alt="Fast Delivery" />
+        <img src="images/truck-fill.svg" alt="Fast Delivery" />
         <h4>Fast Delivery</h4>
       </div>
     </div>
@@ -99,21 +99,21 @@
             </div>
           </div>
           <div class="menu__card">
-            <img src="bacon.jpg" alt="menu" />
+            <img src="images/bacon.jpg" alt="menu" />
             <div class="menu__card__content">
               <h4>Burger w/ Bacon </h4>
               <h3>₱50.00</h3>
             </div>
           </div>
           <div class="menu__card">
-            <img src="footlong.jpg" alt="menu" />
+            <img src="images/footlong.jpg" alt="menu" />
             <div class="menu__card__content">
               <h4>Footlong</h4>
               <h3>₱50.00</h3>
             </div>
           </div>
           <div class="menu__card">
-            <img src="mojos.jpg" alt="menu" />
+            <img src="images/mojos.jpg" alt="menu" />
             <div class="menu__card__content">
               <h4>Mojos</h4>
               <h3>₱40.00</h3>
